# object-store

./: .gitignore  Cargo.toml  README.md
docs/: api.md
migrations/: 0001_init.sql
src/: config.rs  errors.rs  lib.rs  main.rs
src/handlers/: health_handlers.rs  mod.rs  object_handlers.rs
src/models/: bucket.rs  metadata.rs  mod.rs  multipart.rs  object.rs
src/routes/: routes.rs
src/services/: storage_service.rs
