[package]
name = "object-store"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "uuid", "runtime-tokio-rustls"] }
clap = { version = "4.5.51", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
bytes = "1.6"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
